@@ -44,6 +44,23 @@ import life.genny.qwandaq.exception.runtime.NullParameterException;
 import life.genny.qwandaq.models.ANSIColour;
 import life.genny.qwandaq.models.ServiceToken;
 import life.genny.qwandaq.models.UserToken;
+import org.apache.commons.lang3.StringUtils;
+import org.jboss.logging.Logger;
+
+import javax.enterprise.context.ApplicationScoped;
+import javax.enterprise.context.control.ActivateRequestContext;
+import javax.inject.Inject;
+import javax.json.bind.Jsonb;
+import javax.json.bind.JsonbBuilder;
+import javax.persistence.EntityManager;
+import javax.persistence.EntityManagerFactory;
+import javax.persistence.NoResultException;
+import javax.persistence.Persistence;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.LocalTime;
+import java.util.*;
+import java.util.stream.Collectors;
 
 /**
  * A non-static utility class used for standard
@@ -323,13 +340,7 @@ public class BaseEntityUtils {
 
 		Optional<String> attributeValue = baseEntity.getValue(attributeCode);
 		if (attributeValue.isPresent()) {
-
 			Object value = attributeValue.get();
-			if (value == null)
-				return null;
-			if (!(value instanceof String))
-				return null;
-
 			return CommonUtils.cleanUpAttributeValue((String) value);
 		}
 
@@ -398,10 +409,7 @@ public class BaseEntityUtils {
 		if (be == null)
 			return null;
 		Optional<EntityAttribute> ea = be.findEntityAttribute(attributeCode);
-		if (ea.isPresent()) {
-			return ea.get().getObjectAsString();
-		}
-		return null;
+		return ea.map(EntityAttribute::getObjectAsString).orElse(null);
 	}
 
 	/**
@@ -477,12 +485,10 @@ public class BaseEntityUtils {
 	public List<BaseEntity> convertCodesToBaseEntityArray(String strArr) {
 
 		String[] arr = strArr.replace("\"", "").replace("[", "").replace("]", "").replace(" ", "").split(",");
-		List<BaseEntity> entityList = Arrays.stream(arr)
+		return Arrays.stream(arr)
 				.filter(item -> !item.isEmpty())
-				.map(item -> (BaseEntity) getBaseEntityOrNull(item))
-				.collect(Collectors.toList());
-
-		return entityList;
+				.map(item -> getBaseEntityOrNull(item))
+				.toList();
 	}
 
 	/**
